kubernetes/apps/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grocy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
